2003-08-27  David Gravereaux <davygrvy@pobox.com>

	* compat/strftime.c (_fmt): Removed syst array intializer that
	couldn't take variables within it under the watcom compiler:
	'Initializers must be constant'.  I believe Borland has this
	strictness as well.  VC++ must be non-standard about this.

	Changed Win32 platform #ifdef from 'WIN32' to '__WIN32__' as
	this is the correct one to use across the Tcl sources.  Even
	though we do force it in tcl.h, the true parent one is __WIN32__.

	Added missing CONST'ification usage to match prototype listed
	in tclInt.decls.

	* win/tclWinPort.h:  Added a block for OpenWatcom adjustments
	that fixes 1) the same issue Mo did for MinGW lack of missing LPFN_*
	typedefs in their WINE derived <winsock2.h> and 2) The need to be
	strict about how the char type needs to be signed by default.

	* win/tclWinSock.c:  Added OpenWatcom to the commentary about the
	#ifdef HAVE_NO_LPFN_DECLS block.

	* win/tclWinTime.c:  Changed use of '_timezone' to 'timezone' as
	this difference is already adjusted for in tclWinPort.h.  Removed
	unreferenced posixEpoch file-scope global.

	* win/tclWinFile.c (WinReadLinkDirectory): Fix for 'Initializers
	must be constant' with the driveSpec array with OpenWatcom.

2003-08-27  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclUtil.c:    Corrected [Bug 411825] and other bugs in
        TclNeedSpace() where non-breaking space (\u00A0) and backslash-escaped
        spaces were handled incorrectly.  
        * tests/util.test:      Added new tests util-8.[2-6].

2003-08-26  David Gravereaux <davygrvy@pobox.com>

	* generic/tcl.h: Added some support for the LCC-Win32 compiler.
	Unfortunetly, this compiler has a bug in its preprocessor and
	can't build Tcl even with this minor patch.  Also added some
	support for the OpenWatcom compiler.  A new win/makefile.wc to
	follow soon.

2003-08-25  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tools/genStubs.tcl (genStubs::makeDecl): A more subtle way of