@@ -137,7 +137,7 @@ test cmdMZ-return-2.9 {return option handling} -body {
 } -returnCodes 10 -result {}
 test cmdMZ-return-2.10 {return option handling} {
     list [catch {return -level 0 -code error} -> foo] [dictSort $foo]
-} {1 {-code 1 -errorinfo {
+} {1 {-code 1 -errorcode NONE -errorinfo {
     while executing
 "return -level 0 -code error"} -errorline 1 -level 0}}
 test cmdMZ-return-2.11 {return option handling} {
